<resources>
    <string name="app_name" translatable="false">AR Drawing</string>

    <string name="facebook_app_id">"4007749226166659 "</string>
    <string name="facebook_client_token">cf72b9ffc6f8cfa666d89c7eddbe9d05</string>

    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="portuguese">Portuguese</string>

    <string name="onboarding_title1">Animal sounds</string>
    <string name="onboarding_intro1">Unlock your creativity with our AR Drawing</string>
    <string name="onboarding_title2">Set as ringtone</string>
    <string name="onboarding_intro2">Remember to have fun and experiment with different ideas</string>
    <string name="onboarding_title3">Each contact person</string>
    <string name="onboarding_intro3">The possibilities are endless, so let your creativity soar!</string>


    <string name="txt_premission_request">Request permissions</string>
    <string name="txt_write_setting_permission">Write setting</string>
    <string name="txt_read_media_permisison">Read media</string>
    <string name="txt_receiver_notification">Get notifications</string>
    <string name="txt_premission_request_message">In order for the application to operate stably, please provide the following permissions</string>
    <string name="txt_opacity">Opacity</string>
    <string name="txt_picture">Picture</string>
    <string name="txt_flash">Flash</string>
    <string name="txt_record">Record</string>
    <string name="txt_flip">Flip</string>
    <string name="txt_original">Original</string>
    <string name="txt_unframe">Unframe</string>
    <string name="txt_sketch">Sketch</string>
    <string name="txt_trace">Trace</string>
    <string name="txt_draw_by_text">DRAW BY TEXT</string>
    <string name="txt_from_camera">From Camera</string>
    <string name="txt_from_gallery">From Gallery</string>
    <string name="txt_language">Language</string>
    <string name="txt_next">Next</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure exit?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_exit">Exit</string>
    <string name="this_action_contain_ads">This action maybe costain ads</string>
    <string name="txt_get_start">Get start</string>
    <string name="txt_share">Share</string>
    <string name="txt_preview">Preview</string>
    <string name="txt_how_to_use_sketch">How to use sketch?</string>
    <string name="txt_sketch_tutorial1">1. Place your phone on a cup so that it is parallel to the table</string>
    <string name="txt_sketch_tutorial2">2. The image from the phone will be inverted and you can draw it from here</string>
    <string name="txt_how_to_use_trace">How to use trace?</string>
    <string name="txt_trace_tutorial1">1. After selecting your favorite image, the trace of the drawing will be displayed on the phone’s screen.</string>
    <string name="txt_trace_tutorial2">2. Place a piece of paper on the screen and then proceed to draw the image.</string>
    <string name="txt_trace_tutorial3"><![CDATA[3. Place tracing paper over the mobile screen & start tracing the object. \n]]></string>
    <string name="txt_tutorial">Tutorial</string>
    <string name="txt_add_text">Add Text</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_select_font">Select Font</string>
    <string name="txt_select_color">Select Color</string>
    <string name="txt_type_here">Type here</string>
    <string name="txt_line_color">Line Color</string>
    <string name="txt_for_you">For you</string>
    <string name="txt_show_all"><![CDATA[Show all >>]]></string>
    <string name="txt_setting">Setting</string>
    <string name="txt_rate_us">Rate us</string>
    <string name="txt_privacy_policy">Privacy policy</string>
    <string name="txt_you_have_type_text">You must enter text</string>
    <string name="txt_not_support_in_text">The function does not support text format</string>
    <string name="txt_camera_permission">Camera permission</string>
    <string name="txt_permisison">Permission</string>
</resources>