<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/size20"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_green_stroke_round20"
                android:layout_marginTop="@dimen/size20"
                android:layout_marginHorizontal="@dimen/size16"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_how_to_use_trace"
                    android:textColor="#A5DD9B"
                    android:textSize="@dimen/size16"
                    android:fontFamily="@font/dosis_semibold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_trace_tutorial1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dosis_semibold"
                    android:textSize="@dimen/size14"
                    android:layout_marginHorizontal="@dimen/size10"
                    android:layout_marginTop="@dimen/size5"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_trace_tutorial2"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dosis_semibold"
                    android:textSize="@dimen/size14"
                    android:layout_marginHorizontal="@dimen/size10"
                    android:layout_marginTop="@dimen/size5"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_trace_tutorial3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dosis_semibold"
                    android:textSize="@dimen/size14"
                    android:layout_marginHorizontal="@dimen/size10"
                    android:layout_marginTop="@dimen/size5"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="false"
                    app:cardElevation="0dp"
                    android:layout_marginTop="@dimen/size10"
                    android:layout_marginHorizontal="@dimen/size2"
                    app:cardCornerRadius="@dimen/size20"
                    android:layout_marginBottom="@dimen/size2"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/tutorial_trace"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_blue_stroke_round20"
                android:layout_marginTop="@dimen/size20"
                android:layout_marginHorizontal="@dimen/size16"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_how_to_use_sketch"
                    android:textColor="#79D3FF"
                    android:textSize="@dimen/size16"
                    android:fontFamily="@font/dosis_semibold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sketch_tutorial1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dosis_semibold"
                    android:textSize="@dimen/size14"
                    android:layout_marginHorizontal="@dimen/size10"
                    android:layout_marginTop="@dimen/size5"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sketch_tutorial2"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dosis_semibold"
                    android:textSize="@dimen/size14"
                    android:layout_marginHorizontal="@dimen/size10"
                    android:layout_marginTop="@dimen/size5"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="false"
                    app:cardElevation="0dp"
                    android:layout_marginTop="@dimen/size10"
                    android:layout_marginHorizontal="@dimen/size2"
                    app:cardCornerRadius="@dimen/size20"
                    android:layout_marginBottom="@dimen/size2"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/tutorial_sketch"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>