<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_bg">

    <RelativeLayout
        android:id="@+id/toolbar_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="@dimen/size40"
            android:layout_height="@dimen/size40"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            app:tint="@color/app_main"
            android:padding="@dimen/size6"
            />

        <TextView
            android:text="@string/txt_setting"
            style="@style/TextView_Headline1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size16"
            android:textColor="@color/app_main"
            android:layout_centerInParent="true"
            android:fontFamily="@font/dosis_semibold"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/size32"
        android:layout_marginTop="@dimen/size20"
        android:id="@+id/language"
        >
        
        <ImageView
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/ic_langauge_setting"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_language"
            android:textColor="@color/black"
            android:fontFamily="@font/dosis_semibold"
            android:textSize="@dimen/size16"
            android:layout_marginHorizontal="@dimen/size10"
            android:paddingLeft="@dimen/size5"
            />
        <ImageView
            android:layout_width="@dimen/size15"
            android:layout_height="@dimen/size15"
            android:src="@drawable/ic_right_more"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/size32"
        android:layout_marginTop="@dimen/size10"
        >

        <ImageView
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/ic_star"
            app:tint="@color/app_main" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_rate_us"
            android:textColor="@color/black"
            android:fontFamily="@font/dosis_semibold"
            android:textSize="@dimen/size16"
            android:layout_marginHorizontal="@dimen/size10"
            android:paddingLeft="@dimen/size5"
            />
        <ImageView
            android:layout_width="@dimen/size15"
            android:layout_height="@dimen/size15"
            android:src="@drawable/ic_right_more"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/size32"
        android:layout_marginTop="@dimen/size10"
        >

        <ImageView
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/ic_share"
            app:tint="@color/app_main" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_share"
            android:textColor="@color/black"
            android:fontFamily="@font/dosis_semibold"
            android:textSize="@dimen/size16"
            android:layout_marginHorizontal="@dimen/size10"
            android:paddingLeft="@dimen/size5"
            />
        <ImageView
            android:layout_width="@dimen/size15"
            android:layout_height="@dimen/size15"
            android:src="@drawable/ic_right_more"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/size32"
        android:layout_marginTop="@dimen/size10"
        >

        <ImageView
            android:layout_width="@dimen/size20"
            android:layout_height="@dimen/size20"
            android:src="@drawable/ic_policy"
            app:tint="@color/app_main" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_privacy_policy"
            android:textColor="@color/black"
            android:fontFamily="@font/dosis_semibold"
            android:textSize="@dimen/size16"
            android:layout_marginHorizontal="@dimen/size10"
            android:paddingLeft="@dimen/size5"
            />
        <ImageView
            android:layout_width="@dimen/size15"
            android:layout_height="@dimen/size15"
            android:src="@drawable/ic_right_more"/>

    </LinearLayout>
    
</LinearLayout>